--- a/webapi.yaml
+++ b/webapi.yaml
@@ -371,7 +371,7 @@ paths:
   /techsor/{groupCode}/{key}:
     post:
       summary: Post sensor data. (from ZETA Techsor API)
-      description: post ZETA techsor sensor data send to ACT.cloud.
+      description: Post ZETA techsor sensor data send to ACT.cloud.
       parameters:
       - in: path
         name: "groupCode"
