--- a/webapi-v3.1.0.yaml
+++ b/webapi-v3.1.0.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 info:
   title: ACT.cloud webhook API
   description: ACT cloud sensor data post API.
-  version: 0.1.2
+  version: 1.0.0
 servers:
   - url: https://hooks.act-node.com/sensor/v1
     description: ACT cloud webhook APIs
@@ -453,59 +453,59 @@ paths:
           description: Forbidden. webhook URL NOT exist or expired
 
   # TEST Sensor Data Get ########################################################################
-  /data_check/{groupCode}/{Key}:
-    get:
-      summary: Test API for Get sensor data in 24hr
-      description: sensor data get
-      parameters:
-      - in: path
-        name: "groupCode"
-        required: true
-        schema:
-          type: string
-          description: Group Code
-      - in: path
-        name: Key
-        required: true
-        schema:
-          type: string
-          description: Whebhook Key
+  # /data_check/{groupCode}/{Key}:
+  #   get:
+  #     summary: Test API for Get sensor data in 24hr
+  #     description: sensor data get
+  #     parameters:
+  #     - in: path
+  #       name: "groupCode"
+  #       required: true
+  #       schema:
+  #         type: string
+  #         description: Group Code
+  #     - in: path
+  #       name: Key
+  #       required: true
+  #       schema:
+  #         type: string
+  #         description: Whebhook Key
  
-      responses:
-        '200':
-          description: Successfully get sensor data for test
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:   
-                    gid:
-                      type: string
-                    device_id:
-                      type: string
-                    measure_name:
-                      type: string
-                    measure_value:
-                      type: number
-                    time: 
-                      type: string
-                      format: date-time
-              example:
-                [
-                  {
-                    gid: "369eddb5-d09c-48e4-8bc2-84a36e84eb8d",
-                    device_id: "470ffec6-e10d-59f5-9cd3-95b47f95fc9e",
-                    measure_value: 30.5,
-                    measure_name: "temperature",
-                    time: "2021-05-26 12:32:40.244000000"
-                  }
-                ]
-        '400':
-          description: Bad Request. Incorect request.
-        '403':
-          description: Forbidden. webhook URL NOT exist or expired
+  #     responses:
+  #       '200':
+  #         description: Successfully get sensor data for test
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 type: object
+  #                 properties:   
+  #                   gid:
+  #                     type: string
+  #                   device_id:
+  #                     type: string
+  #                   measure_name:
+  #                     type: string
+  #                   measure_value:
+  #                     type: number
+  #                   time: 
+  #                     type: string
+  #                     format: date-time
+  #             example:
+  #               [
+  #                 {
+  #                   gid: "369eddb5-d09c-48e4-8bc2-84a36e84eb8d",
+  #                   device_id: "470ffec6-e10d-59f5-9cd3-95b47f95fc9e",
+  #                   measure_value: 30.5,
+  #                   measure_name: "temperature",
+  #                   time: "2021-05-26 12:32:40.244000000"
+  #                 }
+  #               ]
+  #       '400':
+  #         description: Bad Request. Incorect request.
+  #       '403':
+  #         description: Forbidden. webhook URL NOT exist or expired
 
   # ZETA Techsor Sensor API ################################################################
   /techsor/{groupCode}/{key}:
