--- a/webapi.yaml
+++ b/webapi.yaml
@@ -34,18 +34,6 @@ paths:
               required:
                 - data
               properties:
-                time:
-                  type: string
-                  format: date-time
-                location:
-                  type: object
-                  properties:
-                    lat:
-                      type: string
-                    lng:
-                      type: string
-                    name:
-                      type: string
                 data:
                   type: array
                   items:
@@ -80,30 +68,37 @@ paths:
                             type: string
                           name:
                             type: string
+                time:
+                  type: string
+                  format: date-time
+                location:
+                  type: object
+                  properties:
+                    lat:
+                      type: string
+                    lng:
+                      type: string
+                    name:
+                      type: string
               example:
-              - time: "2021-05-10T09:12:34.56789Z"
+                data:
+                  - index: "0"
+                    type: "env"
+                    value: 23.4
+                    name: "温度"
+                    data_name: "temperature"
+                    unit: "°C"
+                  - index: "1"
+                    type: "env"
+                    value: 50
+                    name: "湿度"
+                    data_name: "relative_humidity"
+                    unit: "%"
+                time: "2021-05-10T09:12:34.56789Z"
                 location: {
                   lat: 35.391133800000006,
                   lng: 139.55841339999998
                 }
-                data: [
-                  {
-                    index: "0",
-                    type: "env",
-                    value: 23.4,
-                    name: "温度",
-                    data_name: "temperature",
-                    unit: "°C",
-                  },
-                  {
-                    index: "1",
-                    type: "env",
-                    value: 50,
-                    name: "湿度",
-                    data_name: "relative_humidity",
-                    unit: "%"
-                  }
-                ]
       responses:
         '200':
           description: Successfully post sensor data
