--- a/webapi.yaml
+++ b/webapi.yaml
@@ -217,6 +217,8 @@ paths:
           application/json:
             schema:
               type: object 
+              required:
+                - data
               properties:
                 time:
                   type: integer
