--- a/webapi.yaml
+++ b/webapi.yaml
@@ -268,32 +268,28 @@ paths:
                             name:
                               type: string
               example:
-                statusCode: 200
-                headers:
-                  Content-Type: "application/json"
-                body:
-                  registration: "Success"
-                  data:
-                  - name: "温度"
-                    data_name: "temperature"
-                    value: 25.68
-                    unit: "°C"
-                    time: "2021-12-29T14:31:00.000Z"
-                  - name: "湿度(相対)"
-                    data_name: "relative_humidity"
-                    value: 83
-                    unit: "%"
-                    time: "2021-12-29T14:31:00.000Z"
-                  - name: "電池量"
-                    data_name: "battery_level"
-                    value: 61
-                    unit: "%"
-                    time: "2021-12-29T14:31:00.000Z"
-                  - name: "電池温度"
-                    data_name: "battery_temperature"
-                    value: 26,
-                    unit: "°C"
-                    time: "2021-12-29T14:31:00.000Z"
+                registration: "Success"
+                data:
+                - name: "温度"
+                  data_name: "temperature"
+                  value: 25.68
+                  unit: "°C"
+                  time: "2021-12-29T14:31:00.000Z"
+                - name: "湿度(相対)"
+                  data_name: "relative_humidity"
+                  value: 83
+                  unit: "%"
+                  time: "2021-12-29T14:31:00.000Z"
+                - name: "電池量"
+                  data_name: "battery_level"
+                  value: 61
+                  unit: "%"
+                  time: "2021-12-29T14:31:00.000Z"
+                - name: "電池温度"
+                  data_name: "battery_temperature"
+                  value: 26,
+                  unit: "°C"
+                  time: "2021-12-29T14:31:00.000Z"
         '400':
           description: Bad Request. Incorect request.
         '403':
@@ -407,6 +403,8 @@ paths:
               schema:
                 type: object
                 properties:
+                  registration:
+                    type: string
                   data:
                     type: array
                     items:
@@ -435,61 +433,45 @@ paths:
                             name:
                               type: string
               example:
-                statusCode: 200
-                headers:
-                  Content-Type: "application/json"
-                body: [
-                  {
-                      "type": "env",
-                      "name": "water_oxygen",
-                      "data_name": "water_oxygen",
-                      "value": 15.51,
-                      "unit": "℃",
-                      "time": "2021-12-18T09:13:53.276Z"
-                  },
-                  {
-                      "type": "env",
-                      "name": "water_temp",
-                      "data_name": "water_temp",
-                      "value": 22,
-                      "unit": "℃",
-                      "time": "2021-12-18T09:13:53.276Z"
-                  },
-                  {
-                      "type": "env",
-                      "name": "water_ph",
-                      "data_name": "water_ph",
-                      "value": 11.95,
-                      "unit": "℃",
-                      "time": "2021-12-18T09:13:53.276Z"
-                  },
-                  {
-                      "type": "env",
-                      "name": "air_temp",
-                      "data_name": "air_temp",
-                      "value": 8.6,
-                      "unit": "%",
-                      "time": "2021-12-18T09:13:53.276Z"
-                  },
-                  {
-                      "name": "air_hum",
-                      "data_name": "air_hum",
-                      "value": 95,
-                      "time": "2021-12-18T09:13:53.276Z"
-                  },
-                  {
-                      "name": "illuminance",
-                      "data_name": "illuminance",
-                      "value": 0,
-                      "time": "2021-12-18T09:13:53.276Z"
-                  },
-                  {
-                      "name": "water_conductivity",
-                      "data_name": "water_conductivity",
-                      "value": 0.006,
-                      "time": "2021-12-18T09:13:53.276Z"
-                  }
-                ]
+                registration: "Success"
+                data:
+                - type: "env"
+                  name: "water_oxygen"
+                  data_name: "water_oxygen"
+                  value: 15.51
+                  unit: "℃"
+                  time: "2021-12-18T09:13:53.276Z"
+                - type: "env"
+                  name: "water_temp"
+                  data_name: "water_temp"
+                  value: 22
+                  unit: "℃"
+                  time: "2021-12-18T09:13:53.276Z"
+                - type: "env"
+                  name: "water_ph"
+                  data_name: "water_ph"
+                  value: 11.95
+                  unit: "℃"
+                  time: "2021-12-18T09:13:53.276Z"
+                - type: "env"
+                  name: "air_temp"
+                  data_name: "air_temp"
+                  value: 8.6
+                  unit: "%"
+                  time: "2021-12-18T09:13:53.276Z"
+                - name: "air_hum"
+                  data_name: "air_hum"
+                  value: 95
+                  time: "2021-12-18T09:13:53.276Z"
+                - name: "illuminance"
+                  data_name: "illuminance"
+                  value: 0
+                  time: "2021-12-18T09:13:53.276Z"
+                - name: "water_conductivity"
+                  data_name: "water_conductivity"
+                  value: 0.006
+                  time: "2021-12-18T09:13:53.276Z"
+
         '400':
           description: Bad Request. Incorect request.
         '403':
